fixed query and other small tweaks
